--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test",
-    "start": "node index.html",
+    "start": "node index.js",
     "your-own-script": "echo npm"
   },
   "keywords": [],
