--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - node
 script:
-  - make lint
-  - make test
+  - make lint index.js
+  - make test index.js
 notifications:
   email: false
