--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test",
-    "start": "node index.js",
+    "start": "node index.html",
     "stat": "run index.html",
     "your-own-script": "echo npm"
   },
@@ -25,5 +25,20 @@
       "precommit":"npm run prettier",
       "prepush": "call npm run lint && call npm run test"
     }
+  },
+  "hook":{
+    "type":"App",
+    "id":11,
+    "active":true,
+    "events":["pull_request"],
+    "app_id":37
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TengenTopppaGurrenLaggan/vlad.git"
+  },
+  "scripts": {
+    "build": "gulp build",
+    "test": "gulp archive && mocha --require @babel/register --reporter spec --timeout 5000"
   }
 }
