--- a/package.json
+++ b/package.json
@@ -27,14 +27,7 @@
   "husky": {
     "hooks": {
       "precommit":"npm run prettier",
-      "prepush": "call npm run lint && call npm run test",
-      "hook":{
-        "type":"App",
-        "id":11,
-        "active":true,
-        "events":["pull_request"],
-        "app_id":37
-    }
+      "prepush": "call npm run lint && call npm run test"
   }
   }
 }
