--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 node_js:
   - node
 script:
-  - make lint
-  - make test
+  - make npm run prettier
 notifications:
   email: false
