--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test",
+    "test": "npm run prettier",
     "start": "node index.js",
     "stat": "run index.html",
     "your-own-script": "echo npm"
