--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint .",
-    "start": "node server.js",
+    "start": "node index.js",
     "prettier": "prettier --config .prettierrc.json --write .js"
   },
   "husky": {
