--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "eslint .",
+    "test": "echo npm",
     "start": "node index.js",
     "prettier": "prettier --config .prettierrc.json --write .js"
   },
